fix: CDP-19658 openshift template header css fixed (#6313)

--- a/src/modules/70-pipeline/components/ManifestSelection/ManifestWizardSteps/OSTemplateWithGit/OSTemplateWithGit.module.scss
+++ b/src/modules/70-pipeline/components/ManifestSelection/ManifestWizardSteps/OSTemplateWithGit/OSTemplateWithGit.module.scss
@@ -1,6 +1,7 @@
 .templateForm {
   height: 100%;
   min-height: 400px;
+  margin-top: 30px;
   .halfWidth {
     width: 45%;
   }
